# nc

./: .gitignore  CMakeLists.txt  README.md  build.gradle  gradle.properties  settings.gradle
debian/: changelog  control  rules
gradle/wrapper/: gradle-wrapper.properties
subprojects/nc/: AndroidManifest.xml  CMakeLists.txt  build.gradle  nc.pc.in
subprojects/nc/include/android/platform/: log
subprojects/nc/include/nc/: event_loop  event_object  log  nc
subprojects/nc/src/: event_object.cc  nc.cc
subprojects/nc/src/android/: event_loop.cc
subprojects/sample/: CMakeLists.txt  sample.cc
