CMAKE_MINIMUM_REQUIRED(VERSION 3.4.1)
PROJECT(NewC CXX)

SET_PROPERTY(GLOBAL PROPERTY GLOBAL_DEPENDS_DEBUG_MODE 0)

INCLUDE(GNUInstallDirs)

IF(NOT DEFINED CMAKE_INSTALL_LIBDIR)
    MESSAGE("CMAKE_INSTALL_LIBDIR is not defined, fallback to default")
    SET(CMAKE_INSTALL_LIBDIR "${CMAKE_INSTALL_PREFIX}/lib")
ENDIF(NOT DEFINED CMAKE_INSTALL_LIBDIR)

IF(NOT DEFINED CMAKE_INSTALL_INCLUDEDIR)
    MESSAGE("CMAKE_INSTALL_INCLUDEDIR is not defined, fallback to default")
    SET(CMAKE_INSTALL_INCLUDEDIR "${CMAKE_INSTALL_PREFIX}/include")
ENDIF(NOT DEFINED CMAKE_INSTALL_INCLUDEDIR)

ADD_SUBDIRECTORY(subprojects/nc)

ADD_SUBDIRECTORY(subprojects/sample)
