CMAKE_MINIMUM_REQUIRED(VERSION 3.4.1)

PROJECT(nc VERSION 0.0.1 LANGUAGES CXX)

IF(NOT DEFINED APPLE)
    SET(CMAKE_SKIP_BUILD_RPATH true)
ENDIF(NOT DEFINED APPLE)

SET(CMAKE_POSITION_INDEPENDENT_CODE TRUE)
SET(CMAKE_CXX_STANDARD 17)

ADD_DEFINITIONS(-DLOG_TAG="NC")

FIND_PACKAGE(Threads)
AUX_SOURCE_DIRECTORY(src NC_SRC)
INCLUDE_DIRECTORIES(include)
FILE(GLOB_RECURSE "include/*" PUBLIC_HEADERS)

ADD_LIBRARY(${PROJECT_NAME} SHARED ${NC_SRC})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} Threads::Threads ${CMAKE_DL_LIBS})
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES
    PUBLIC_HEADER "${PUBLIC_HEADERS}"
    VERSION ${PROJECT_VERSION}
    SOVERSION ${PROJECT_VERSION_MAJOR}
)
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC include)
