CMAKE_MINIMUM_REQUIRED(VERSION 3.4.1)

PROJECT(nc VERSION 0.0.1 LANGUAGES CXX)

IF(NOT DEFINED APPLE)
    SET(CMAKE_SKIP_BUILD_RPATH true)
ENDIF(NOT DEFINED APPLE)

SET(CMAKE_POSITION_INDEPENDENT_CODE TRUE)
SET(CMAKE_CXX_STANDARD 17)

ADD_DEFINITIONS(-DLOG_TAG="NC")

FIND_PACKAGE(Threads)
AUX_SOURCE_DIRECTORY(src NC_SRC)
INCLUDE_DIRECTORIES(include)
FILE(GLOB_RECURSE "include/*" PUBLIC_HEADERS)

ADD_LIBRARY(${PROJECT_NAME} SHARED ${NC_SRC})
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES
    PUBLIC_HEADER "${PUBLIC_HEADERS}"
    INTERFACE_INCLUDE_DIRECTORIES "${CMAKE_CURRENT_SOURCE_DIR}/include"
    LINK_LIBRARIES Threads::Threads;${CMAKE_DL_LIBS}
    VERSION ${PROJECT_VERSION}
    SOVERSION ${PROJECT_VERSION_MAJOR}
)
INSTALL(TARGETS ${PROJECT_NAME}
    CONFIGURATIONS Release
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_NAME}
)
INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include/${PROJECT_NAME}
    CONFIGURATIONS Release
    DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
)

SET(PC_NAME ${PROJECT_NAME})
CONFIGURE_FILE(${PROJECT_NAME}.pc.in ${PROJECT_NAME}.pc @ONLY)
INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}.pc
    CONFIGURATIONS Release
    DESTINATION ${CMAKE_INSTALL_LIBDIR}/pkgconfig
)

# Last
SET_DIRECTORY_PROPERTIES(PROPERTIES ADDITIONAL_CMAKE_CLEAN_FILES "${PROJECT_NAME}.pc")
