CMAKE_MINIMUM_REQUIRED(VERSION 3.4.1)

PROJECT(sample VERSION 0.0.1 LANGUAGES CXX)

ADD_DEFINITIONS(-DLOG_TAG="SAMPLE")

INCLUDE(GNUInstallDirs)
FIND_PACKAGE(Threads)
FIND_PACKAGE(nc CONFIG)
IF(nc_FOUND)
    SET(NC_LIBS nc::nc)
    SET(DEPENDS_ON_NC nc::nc)
ELSE(nc_FOUND)
    SET(NC_LIBS nc)
    SET(DEPENDS_ON_NC nc)
ENDIF(nc_FOUND)


ADD_EXECUTABLE(${PROJECT_NAME} sample.cc)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${NC_LIBS} Threads::Threads ${CMAKE_DL_LIBS})
ADD_DEPENDENCIES(${PROJECT_NAME} ${DEPENDS_ON_NC})
INSTALL(TARGETS ${PROJECT_NAME} DESTINATION bin)
